[package]
name = "nodecask"
version = "0.1.0"
edition = "2024"

[dependencies]
# 错误
anyhow = "1.0"

# 日志
log = "0.4.29"
colog = "1.4.0"

# 框架
askama = "0.16.0"
axum = { version = "0.8.9", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
serde = { version = "1.0.216", features = ["derive"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
serde_json = "1.0.148"
into_response_derive = { path = "./into_response_derive" }
image = "0.25.9"
html2text = "0.17.1"
tantivy = "0.26.1"
tantivy-jieba = "0.19.0"
reqwest = { version = "0.13.1", features = ["json"] }
arc-swap = "1.8.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
zip = "2.4.2"
mime_guess = "2.0.5"
mail-send = { version = "0.6.0", features = ["aws-lc-rs"] }
rustls = { version = "0.23.36", features = ["ring"] }
rss = "2.0.12"
url = "2.5.8"
percent-encoding = "2.3.1"
regex = "1.12.2"
sysinfo = "0.38.4"
pulldown-cmark = "0.13.0"
lol_html = "2.7.1"
adblock = "0.12.1"
totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
boa_engine = "0.21.0"
boa_runtime = "0.21.0"
grass = "0.13.4"
rust-i18n = "4.0.0"
serde_urlencoded = "0.7.1"
base64 = "0.22.1"
object_store = { version = "0.13.1", features = ["fs"] }
futures-util = "0.3.31"
shadow-rs = { version = "2.0.0", default-features = false }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "half"] }

[build-dependencies]
grass = "0.13.4"
zip = "2.4.2"
walkdir = "2.5.0"
toml = "1.0.6"
shadow-rs = "2.0.0"
